# FIB

./: README.md  main.py  pyproject.toml  requirements.txt  sync.sh  syncronize.sh
Results_modular_external/20260507_090330/: external_meta.json  external_results.xlsx
Results_modular_external/20260507_143325_external/: external_meta.json  external_results.xlsx  ~$external_results.xlsx
Results_modular_internal/20260506_162835_Internal/: catboost_bundle.joblib  internal_meta.json  internal_results.xlsx  logreg_bundle.joblib  randomforest_bundle.joblib  xgboost_bundle.joblib
configs/: external.yaml  internal.yaml
models/: builders.py
pipelines/: external.py  internal.py
utils/: config.py  data.py  dca.py  diagnostics.py  io_utils.py  markers.py  metrics.py  plots.py  shap_utils.py  thresholding.py
